--- a/GestorDeFormularios/GestorDeFormularios/Properties/Resources.resx
+++ b/GestorDeFormularios/GestorDeFormularios/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="registrado" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\registrado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="impuesto-sobre-la-renta" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\impuesto-sobre-la-renta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
