--- a/GestorDeFormularios/GestorDeFormularios/Properties/Resources.resx
+++ b/GestorDeFormularios/GestorDeFormularios/Properties/Resources.resx
@@ -118,13 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="cambio-de-divisas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cambio-de-divisas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="impuesto-sobre-la-renta" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\impuesto-sobre-la-renta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="registrado" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\registrado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="impuesto-sobre-la-renta" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\impuesto-sobre-la-renta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cambio-de-divisas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cambio-de-divisas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fibonacci" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fibonacci.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
